fix: gap 5px

--- a/07-lection5/04-input/input.css
+++ b/07-lection5/04-input/input.css
@@ -1,7 +1,7 @@
 .input {
   display: inline-flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 5px;
 }
 
 .input__wrapper {
